--- a/timeclock.html
+++ b/timeclock.html
@@ -71,9 +71,10 @@
             <button type="button" class="btn btn-danger"
             onclick="document.getElementById('clockout').innerHTML = Date()">
             Clock Out.</button>
+            
+      </div>
 
-
-
+      <p style="padding:20px;"></p>
 
   <div class="container">
  
